--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,7 @@
       "@dtos/*": ["src/dtos/*"],
       "@assets/*": ["./src/assets/*"],
       "@components/*": ["./src/presentation/components/*"],
-      "@screens/*": ["./src/screens/*"],
+      "@screens/*": ["./src/presentation/screens/*"],
       "@storage/*": ["./src/storage/*"],
       "@utils/*": ["./src/utils/*"],
       "@services/*": ["./src/services/*"],
